# procesador-xml-cr

./: .gitignore  CLAUDE.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 5079bdcc3bc9_crear_tablas_comprobantes_y_lineas.py  5c0b5ab84e3d_crear_tabla_agent_tokens.py  67c4c5033c0e_crear_tabla_clientes.py  785e7a8d7955_crear_tabla_usuarios.py  8b609e681399_agregar_created_at_a_usuarios.py  bce9e77abf9e_crear_tabla_entradas_manuales.py  c674f6fcd420_crear_tabla_reglas_clasificacion.py  f476851486d4_lineas_tarifa_label_y_tipo_fk_cliente_.py
backend/app/: config.py  db.py  main.py
backend/app/auth/: deps.py  router.py  security.py  tokens.py
backend/app/models/: __init__.py  agent_token.py  cliente.py  comprobante.py  entrada_manual.py  regla_clasificacion.py  usuario.py
backend/app/motor/: clasificacion.py  d150.py  ingesta.py  ingesta_lote.py  parser.py  preclasificacion.py  resumen.py  schemas.py  tarifa.py  transforms.py
backend/sistema_xml_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_agent_token.py  test_agent_tokens_endpoint.py  test_auth.py  test_clasificacion.py  test_clientes.py  test_config.py  test_d150.py  test_entradas_manuales.py  test_health.py  test_ingesta_endpoint.py  test_ingesta_lote.py  test_ingesta_mapeo.py  test_parser.py  test_preclasificacion.py  test_preclasificacion_endpoint.py  test_regla_modelo.py  test_reglas_endpoint.py  test_resumen.py  test_resumen_clasificacion.py  test_resumen_endpoint.py  test_tarifa.py  test_transforms.py
(+107 files in other folders)
